# multimaterial-3d-printing

./: .gitignore  CHANGELOG.md  Cube.3mf  Cube_F1-1_F2-2_F1-3.3mf  Cube_interlocking.3mf  LICENSE  README.md  cube_interlock.3mf  cube_wall_interlock.3mf  infill_wall_interlocking.py  layer_pattern.py  pyproject.toml
archive/: interlocking_perimeters.py  layer_material.py  topology_infill.py
examples/: analyze_sandwich.py  compare_layups.py
samples/: README.md
samples/inputs/: Cube.gcode.3mf
src/multimaterial_3d/: __init__.py
src/multimaterial_3d/analysis/: __init__.py  adaptive_layers.py  mechanical.py  optimizer.py  print_estimator.py  thermal.py
src/multimaterial_3d/core/: __init__.py  file_io.py  materials.py
src/multimaterial_3d/gui/: __init__.py  __main__.py  analysis_viz.py  app.py  theme.py  viewer_3d.py
src/multimaterial_3d/postprocessors/: __init__.py  interlocking_perimeters.py  layer_pattern.py  topology_infill.py  wall_infill_interlock.py
src/multimaterial_3d/utils/: __init__.py  gcode_parser.py
tests/: test_layer_pattern.py  test_materials.py  test_mechanical.py  test_thermal.py
