[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multimaterial-3d"
version = "1.3.0"
description = "Multi-material 3D printing post-processing toolkit for Bambu Studio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ioannis Christodoulou"},
]
keywords = ["3d-printing", "multi-material", "bambu-studio", "3mf", "gcode", "post-processor",
            "composite", "laminate", "topology-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mechanical Engineering",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
analysis = [
    "scipy>=1.7",
    "shapely>=2.0",
]
visualization = [
    "matplotlib>=3.5",
]
mesh = [
    "trimesh>=3.20",
]
gui = [
    "pyside6>=6.5",
    "pyvista>=0.40",
    "pyvistaqt>=0.11",
    "trimesh>=3.20",
    "lxml>=4.9",
]
all = [
    "scipy>=1.7",
    "shapely>=2.0",
    "matplotlib>=3.5",
    "trimesh>=3.20",
    "pyside6>=6.5",
    "pyvista>=0.40",
    "pyvistaqt>=0.11",
    "lxml>=4.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/ichris97/multimaterial-3d-printing"
Repository = "https://github.com/ichris97/multimaterial-3d-printing"
Issues = "https://github.com/ichris97/multimaterial-3d-printing/issues"

[project.scripts]
mm3d-layer-pattern = "multimaterial_3d.postprocessors.layer_pattern:main"
mm3d-interlock-perimeters = "multimaterial_3d.postprocessors.interlocking_perimeters:main"
mm3d-topology-infill = "multimaterial_3d.postprocessors.topology_infill:main"
mm3d-wall-infill-interlock = "multimaterial_3d.postprocessors.wall_infill_interlock:main"
mm3d-gui = "multimaterial_3d.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
